--- a/src/components/sections/ExploreSection.module.css
+++ b/src/components/sections/ExploreSection.module.css
@@ -1,11 +1,7 @@
 .explore_section {
   background: var(--gradient-bg);
- /*  background: red; */
   position: relative;
   z-index: 0;
-  /* min-height: 100vh; */
-  /* overflow: clip; */
-  padding: 5rem 0;
 }
 
 .nike_logo {
