--- a/src/components/sections/ProductSection.module.css
+++ b/src/components/sections/ProductSection.module.css
@@ -5,5 +5,6 @@
   .product_message{
     text-align: center;
     max-width: 573px;
+    z-index: 1;
   }
 
