--- a/src/components/sections/WhyChooseUs.module.css
+++ b/src/components/sections/WhyChooseUs.module.css
@@ -12,8 +12,6 @@
   content: "<<°";
   position: absolute;
   font-size: 15rem;
-  top: -15rem;
-  left: -5rem;
   color: rgb(56, 55, 88);
   font-family: serif;
   z-index: -1;
